--- a/MassRTPSearch.csproj
+++ b/MassRTPSearch.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="JTJabba.EasyConfig" Version="1.1.0" />
     <AdditionalFiles Include="config.json" CopyToOutputDirectory="PreserveNewest" />
+    
+    <AdditionalFiles Include="README.md" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
