--- a/MassRTPSearch.csproj
+++ b/MassRTPSearch.csproj
@@ -12,6 +12,10 @@
     <AdditionalFiles Include="config.json" CopyToOutputDirectory="PreserveNewest" />
     
     <AdditionalFiles Include="README.md" CopyToOutputDirectory="PreserveNewest" />
+    
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
