--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "Model": "llama-3.1-sonar-huge-128k-online",
+    "Model": "sonar-pro",
     "MaxConcurrentRequests": 10,
     "MaxRequestsPerMin": 49
 }
